Do some update to pass the first case and make all model work and add screenshot relate path file

--- a/Config/TimeConfig.json
+++ b/Config/TimeConfig.json
@@ -2,5 +2,5 @@
   "name": "application-name",
   "version": "0.0.1",
   "waittimeout":6000,
-  "capturepath":"f:\\"
+  "capturepath":"f:\\caspercapture\\"
 }
